@@ -299,6 +299,14 @@ local $Test::Builder::Level = $Test::Builder::Level + 1;
 use Test::More;
 local $Test::Builder::Level = $Test::Builder::Level + 1;
 
+## name STDIN, STDOUT and STDOUT shouldn't cause warnings.
+## failures 0
+## cut
+
+STDIN->autoflush;
+STDOUT->autoflush;
+STDERR->autoflush;
+
 ##############################################################################
 # Local Variables:
 #   mode: cperl
